[package]
name = "mcp-session-memory"
version = "1.1.0"
edition = "2024"
authors = ["James Karanja Maina <james.karanja@zavora.ai>"]
license = "Apache-2.0"
description = "Session Memory MCP server for ADK-Rust Enterprise — typed session state, scoped memory recall, replay snapshots, and resumable workflows"
repository = "https://github.com/zavora-ai/mcp-session-memory"
homepage = "https://enterprise.adk-rust.com"
documentation = "https://docs.rs/mcp-session-memory"
keywords = ["mcp", "session", "memory", "agent", "enterprise"]
categories = ["development-tools", "data-structures"]
rust-version = "1.85"
readme = "README.md"

[features]
default = []
redis = ["dep:redis"]
postgres = ["dep:sqlx"]
all-backends = ["redis", "postgres"]

[dependencies]
adk-mcp-sdk = "0.1.0"
rmcp = { version = "1.7", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4"] }
schemars = "1"
rustls = { version = "0.23", features = ["aws-lc-rs"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

# Postgres
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
